utoipa-gen/tests/snapshots/path_derive__derive_path_test_do_not_collect_inlined_schema.snap
---
source: utoipa-gen/tests/path_derive.rs
expression: "&schemas"
snapshot_kind: text
---
{
  "Account": {
    "properties": {
      "id": {
        "format": "int32",
        "type": "integer"
      }
    },
    "required": [
      "id"
    ],
    "type": "object"
  }
}
