utoipa-gen/tests/snapshots/path_derive__derive_path_test_do_not_collect_recursive_inlined.snap
---
source: utoipa-gen/tests/path_derive.rs
expression: body
snapshot_kind: text
---
{
  "properties": {
    "account": {
      "properties": {
        "id": {
          "format": "int32",
          "type": "integer"
        }
      },
      "required": [
        "id"
      ],
      "type": "object"
    },
    "name": {
      "type": "string"
    }
  },
  "required": [
    "name",
    "account"
  ],
  "type": "object"
}
