utoipa-gen/tests/snapshots/path_derive__derive_path_with_description_and_summary_override.snap
---
source: utoipa-gen/tests/path_derive.rs
expression: "&operation"
snapshot_kind: text
---
{
  "description": "This is description override",
  "operationId": "test_description_summary",
  "responses": {
    "200": {
      "description": "success response"
    }
  },
  "summary": "This is summary override that is\nsplit to multiple lines",
  "tags": []
}
