utoipa-gen/tests/snapshots/path_derive__derive_path_with_extensions-2.snap
---
source: utoipa-gen/tests/path_derive.rs
assertion_line: 310
expression: "operation.pointer(\"/x-extension-2\").unwrap()"
---
{
  "type": "extension2",
  "value": 2
}
